--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "react": "^16.13.0",
     "react-datepicker": "^2.14.0",
     "react-dom": "^16.13.0",
+    "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0"
   },
