--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "react-dom": "^16.13.0",
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0"
+    "react-scripts": "3.4.0",
+    "victory": "^34.1.3"
   },
   "scripts": {
     "start": "PORT=3001 react-scripts start",
