--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-loading": "^2.0.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-tooltip": "^4.2.7",
     "victory": "^34.1.3"
   },
   "scripts": {
