--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.2",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-animations": "^1.0.0",
     "react-bootstrap": "^1.3.0",
     "react-datepicker": "^2.16.0",
     "react-dom": "^16.13.1",
@@ -20,6 +21,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "react-tooltip": "^4.2.9",
+    "styled-components": "^5.2.0",
     "victory": "^34.3.12"
   },
   "scripts": {
